Added names to appropriate sub-sections and added my details to the table

--- a/latex Lab files/sections/SharedDoc.tex
+++ b/latex Lab files/sections/SharedDoc.tex
@@ -29,7 +29,7 @@ This is the table of contributors (Table~\ref{authors}):
 \hline
 \textbf{Name} & \textbf{ID} \\
 \hline
-& \\
+Marcus & 4275782\\
 \hline
 & \\
 \hline
