--- a/latex Lab files/sections/SecondPart.tex
+++ b/latex Lab files/sections/SecondPart.tex
@@ -1,4 +1,4 @@
-\section{Second Member}
+\section{Second Member - Marcus}
 This is the section dedicated to one of the team members, and it should be written individually . It can include a range of things; first subsection is a space for you to point out the strengths and weaknesses of the module, including complaints about the module coordinator Max Wilson. The second section should have a selfie image with Max! The last part of it is the most important one. You will need to write a paragraph about what you have learned in this module. You can write it in \textbf{Bold} if you want or you can use other fonts. 
 
 Please do not forget:
