Completed my section of the document, altered shared document layout, added contents page, moved my name to the second row in contributors

--- a/latex Lab files/main.tex
+++ b/latex Lab files/main.tex
@@ -1,7 +1,7 @@
 %documentclass sets the look of the whole document. you can try changing it around with the two commented out examples.
 
 \documentclass{article}
-
+\usepackage{graphicx}
 %\documentclass{proc}
 %\documentclass{beamer}
 
@@ -14,7 +14,8 @@
 \maketitle
 
 %to include the table of contents just uncoment the line below. The newpage line would move the start of the document on the next page after the table of contents.
-%\tableofcontents
+\newpage
+\tableofcontents
 %\newpage
 
 \include{sections/SharedDoc}
