--- a/latex Lab files/sections/SecondPart.tex
+++ b/latex Lab files/sections/SecondPart.tex
@@ -1,31 +1,26 @@
 \section{Second Member - Marcus}
-This is the section dedicated to one of the team members, and it should be written individually . It can include a range of things; first subsection is a space for you to point out the strengths and weaknesses of the module, including complaints about the module coordinator Max Wilson. The second section should have a selfie image with Max! The last part of it is the most important one. You will need to write a paragraph about what you have learned in this module. You can write it in \textbf{Bold} if you want or you can use other fonts. 
-
-Please do not forget:
-\begin{itemize}
-	\item First paragraph should have your comments about the module
-	\item Second one, a selfie img with Max
-	\item Last one, what you learned in this module.
-\end{itemize}
-
 \subsection{Comments about the module}
-This is the first subsection. Do not forget to include the best parts about the module as well as what you did not like about Max Wilson during the term.
+The module has been quite good so far in providing me with an insight to the process of software engineering although I have felt that sometimes there are examples that aren't always clear. Also a couple of the assessed labs have felt particularly rushed and short on time.
 
 \subsection{Selfie with Max}
 
-To include an image, you will need to remove the comments from the code below, place an image in the main folder, and do not forget to put the name of the image instead of ImgName. 
+\begin{figure}[h]
+\caption{Selfie with Max}
+\centering
+\includegraphics[width=0.5\textwidth]{editedmarcusmaxselfie.png}
+\label{fig:selfie}
+\end{figure}
 
-%\begin{figure}[h]
-%\caption{Selfie with Max}
-%\centering
-%\includegraphics[width=0.5\textwidth]{ImgName}
-%\label{fig:selfie}
-%\end{figure}
-
-You can then use the label of the figure to reference it later with the command ${\backslash}ref.$ you can comment out the next line to see an example of how it works.
-
-% My selfie with Max is in  Figure~\ref{fig:selfie}.
+My selfie with Max is in  Figure~\ref{fig:selfie}. (I have the best photo-editing skills ever...)
 
 \subsection{What I have learned in this module}
-This is some random text.
+So far in this module I have learnt how to analyse a given textual scenario in order to identify the stake holders, actors and use cases involved so that I can model them. I've also learnt the fundamentals for requirements engineering which is important for establishing what exactly needs to be built to minimise costs at a later date.
+
+I've learnt some of the techniques used to investigate the systems currently in place such as focus groups, interviews and observations as well as their individual strengths and weaknesses so that I can more effectively understand systems and what individual use cases may exist within them.
+
+Along with investigating the current systems comes the process of modelling the data gathered so that it can be more easily understood. Within this module I've come to understand the uses of different diagrams such as Use Case Diagrams, Sequence Diagrams and Activity Diagrams to model said data but also the systems to be implemented. This can be very useful later on such as using a sequence diagram to help implement a complex system that involves a lot of communication between actors and systems. I've come to understand the relationship between the diagrams and the initial analysis of the scenario and how it can make producing the models easier.
+
+During this module I've also learnt about the key differences between the user requirements and the actual system specifications and how they are linked. I now know how to produce more structured specifications and when to use tables such as specifying exact conditions and calculations.
+
+More recently I've been learnt about LaTeX which is a piece of software that provides are more programming-oriented way of producing a document while not having to worry about the layout allowing me to easily produce neater looking documents. I've been re-introduced to git as I had some prior experience using it but the module has provided me with a better understanding as to how the version control works in terms of saving the changes made rather than a copy of the whole file.
 
