--- a/latex Lab files/sections/SharedDoc.tex
+++ b/latex Lab files/sections/SharedDoc.tex
@@ -1,13 +1,10 @@
 \section{Shared Part}
 
-This could be the Shared Part of the document. It is designed to be written by all members of the team.
-
-Each member should ideally write their details in the table of contributors in the Shared Part of the document.
-
-
+\subsection{Comments from the first student}
+This is the first subsection. Do not forget to include the best parts about the module as well as what you did not like about Max Wilson during the term.
 
 \subsection{Comments from the second student}
-This is the first subsection. Do not forget to include the best parts about the module as well as what you did not like about Max Wilson during the term.
+The module has been quite good so far in providing me with an insight to the process of software engineering although I have felt that sometimes there are examples that aren't always clear. Also a couple of the assessed labs have felt particularly rushed and short on time.
 
 \subsection{Comments from the third student}
 This is the first subsection. Do not forget to include the best parts about the module as well as what you did not like about Max Wilson during the term.
@@ -17,11 +14,8 @@ This is the first subsection. Do not forget to include the best parts about the 
 
 \subsection{Table of Contributors}
 
-
-If you want to move a table around you will need to put some parameters in square brackets, if you want it exactly where it is positioned in the text editor just uncomment the [h] below, just after begin{table}
-
 This is the table of contributors (Table~\ref{authors}):
-\begin{table}%[h]
+\begin{table}[h]
 \centering
 \caption{People in the Group}
 \label{authors}
@@ -29,9 +23,9 @@ This is the table of contributors (Table~\ref{authors}):
 \hline
 \textbf{Name} & \textbf{ID} \\
 \hline
-Marcus & 4275782\\
-\hline
 & \\
+\hline
+Marcus & 4275782\\
 \hline
 & \\
 \hline
